moved js file to js folder

--- a/StringClassAssignment/StringExample.html
+++ b/StringClassAssignment/StringExample.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>String Operations</title>
-    <script src="css/StringExtention.js"></script>
-    <script src="css/StringOperations.js"></script>
+    <script src="js/StringExtention.js"></script>
+    <script src="js/StringOperations.js"></script>
 </head>
 <body>
     <form>
