checked corner cases for substring

--- a/StringClassAssignment/StringExample.html
+++ b/StringClassAssignment/StringExample.html
@@ -17,7 +17,7 @@
                <tr>               
                    <td>
                        <label>Enter a value</label>
-                       <input id="inputStringForLength" /></td>                    
+                       <input id="inputStringForLength" type="text" /></td>                    
                    <tr>               
                    <td>                    
                         <input id="findLengthBtn" type="button" value="Length"/>
@@ -36,10 +36,10 @@
                <tr>               
                    <td>
                        <label>Enter a value</label>
-                       <input id="firstValueForConcat" /></td>    
+                       <input id="firstValueForConcat"  type="text"/></td>    
                         <td>
                        <label>Enter another value to concat</label>
-                       <input id="secondValueForConcat" /></td>                  
+                       <input id="secondValueForConcat"  type="text"/></td>                  
                    <tr>               
                    <td>                    
                         <input id="concatinateBtn" type="button" value="Concat"/>
@@ -59,10 +59,10 @@
                <tr>               
                    <td>
                        <label>Enter String value</label>
-                       <input id="inputStringForCharAt" /></td>    
+                       <input id="inputStringForCharAt"  type="text"/></td>    
                         <td>
                        <label>Enter index value</label>
-                       <input id="indexValueForCharAt" /></td>                  
+                       <input id="indexValueForCharAt"  type="text"/></td>                  
                    <tr>               
                    <td>                    
                         <input id="charAtBtn" type="button" value="Get Char"/>
@@ -83,10 +83,10 @@
                <tr>               
                    <td>
                        <label>Enter a value</label>
-                       <input id="firstValueForIndexOf" /></td> 
+                       <input id="firstValueForIndexOf"  type="text"/></td> 
                         <td>
                        <label>Enter another value</label>
-                        <input id="secondValueForIndexOf" /></td>                
+                        <input id="secondValueForIndexOf"  type="text"/></td>                
                    <tr>
                    <td>                    
                         <input id ="indexOfBtn" type="button" value="Get Index"/>
@@ -106,10 +106,10 @@
                <tr>               
                    <td>
                        <label>Enter a value</label>
-                       <input id="firstValueForLastIndexOf" /></td> 
+                       <input id="firstValueForLastIndexOf"  type="text"/></td> 
                         <td>
                        <label>Enter another value</label>
-                        <input id="secondValueForLastIndexOf" /></td>                
+                        <input id="secondValueForLastIndexOf"  type="text"/></td>                
                    <tr>
                    <td>                    
                         <input id ="lastIndexOfBtn" type="button" value="Get last index"/>
@@ -130,12 +130,12 @@
                <tr>               
                    <td>
                        <label>Enter a String value</label>
-                       <input id="inputStringForSubstring" /></td> 
+                       <input id="inputStringForSubstring"  type="text"/></td> 
                         <td>
                        <label>Enter start index value</label>
-                        <input id="startIndexValueForSubstring" /></td>     
+                        <input id="startIndexValueForSubstring"  type="text"/></td>     
                         <td><label>Enter last index value</label>
-                        <input id="lastIndexValueForSubstring" /></td>               
+                        <input id="lastIndexValueForSubstring"  type="text"/></td>               
                    <tr>
                    <td>                    
                         <input id ="subStringBtn" type="button" value="Get substring"/>
@@ -155,12 +155,12 @@
                <tr>               
                    <td>
                        <label>Enter a String value</label>
-                       <input id="inputStringForReplaceString" /></td> 
+                       <input id="inputStringForReplaceString"  type="text"/></td> 
                         <td>
                        <label>Enter string to be replaced</label>
-                        <input id="stringValueTobeReplaced" /></td>     
+                        <input id="stringValueTobeReplaced" / type="text"></td>     
                         <td><label>Enter new string value to replace</label>
-                        <input id="stringValueToReplace" /></td>               
+                        <input id="stringValueToReplace"  type="text"/></td>               
                    <tr>
                    <td>                    
                         <input id ="replaceBtn" type="button" value="Replace"/>
